# pcmd

./: CHANGELOG.md  README.md  requirements.txt  setup.cfg  setup.py
pcmd/: __main__.py  cmdline.py  demo.py  pcmd.py
