# setup.cfg https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
[metadata]
name = pcmd
author = fyangw
author_email = fyangw@github
version = 0.1.0
description = pcmd
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
home_page = http://github.com
license = Apache
# https://pypi.org/pypi?%3Aaction=list_classifiers
classifier =
    Private :: Do Not Upload
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
#keywords =

[options]
packages = find:
#install_requires =
#    six >= 1.10

#tests_require =
#    pytest
#    mock

test_suite = pcmd.tests
include_package_data = True
zip_safe = False

#[options.entry_points]
#console_scripts =
#    pcmd = pcmd.cmdline:main

#[options.package_data]
#pcmd =
#    conf/*
#    data/*

[sdist]
dist_dir = output/dist

[bdist_wheel]
#universal=1
dist_dir = output/dist

[easy_install]
index_url = http://mirrors.aliyun.com/pypi/simple/
